# lumen

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-local-first-tauri.md  0002-money-and-deduplication.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_categorization.sql  0003_user_profile.sql  0004_credit_card_invoices.sql  0005_financial_targets.sql  0006_invoice_totals.sql  0007_improve_categories.sql  0008_integrity.sql  0009_csv_mapping_profiles.sql  0010_add_investments_category.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/application/: state.rs
src-tauri/src/commands/: backup.rs  credit_card.rs  mod.rs  reports.rs
src-tauri/src/domain/: categorization.rs  credit_card.rs  import.rs  mod.rs  money.rs
src-tauri/src/infrastructure/: database.rs  importer.rs  mod.rs
src/app/: App.tsx
src/features/accounts/: AccountsCards.tsx
src/features/categories/: CategoriesRules.tsx
src/features/dashboard/: Dashboard.tsx
src/features/import/: ImportPage.tsx
src/features/onboarding/: Onboarding.tsx
src/features/reports/: Reports.tsx
src/features/settings/: SettingsPage.tsx
src/features/transactions/: TransactionForm.tsx  (+1 more)
src/shared/: api.ts  format.test.ts  format.ts  theme.ts  types.ts
(+3 files in other folders)
