[package]
name = "lumen"
version = "0.3.0"
description = "Gestor financeiro pessoal local-first"
edition = "2021"

[lib]
name = "gestor_financeiro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
quick-xml = "0.37"
sha2 = "0.10"
regex = "1"
thiserror = "2"
pdf-extract = "0.10"

[dev-dependencies]
tempfile = "3"
